# wgpu-wasm-test

./: Cargo.toml  README.md  index.html
pkg/: package.json  wgpu_webasm.d.ts  wgpu_webasm.js  wgpu_webasm_bg.js  wgpu_webasm_bg.wasm  wgpu_webasm_bg.wasm.d.ts
src/: lib.rs  main.rs  state.rs
